--- a/app/src/main/res/layout/layout_drink_item.xml
+++ b/app/src/main/res/layout/layout_drink_item.xml
@@ -14,7 +14,8 @@
         android:gravity="center"
         android:padding="16dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        >
 
         <ImageView
             android:id="@+id/imageView"
