--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
     tools:context=".MainActivity">
 
    <LinearLayout
-       android:background="#E7E7E7"
+       android:background="#e78d2c"
        android:id="@+id/panel"
        android:orientation="horizontal"
        android:weightSum="16"
@@ -24,7 +24,7 @@
            android:layout_height="wrap_content"/>
 
        <TextView
-           android:text="DRINK LIST"
+           android:text="CoyuPe Shopping"
            android:layout_gravity="center_vertical"
            android:textSize="30sp"
            android:textStyle="bold"
@@ -65,6 +65,35 @@
         android:layout_below="@+id/panel"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
+
+<!--    <Button-->
+<!--        android:id="@+id/btnSignUp"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="Salir">-->
+<!--    </Button>-->
+
+<!--    <TextView-->
+<!--        android:id="@+id/textView"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="Welcome"-->
+<!--        android:textAlignment="center"-->
+<!--        android:textSize="20sp"-->
+<!--        android:textColor="@color/black"-->
+<!--        android:textStyle="bold"-->
+<!--        >-->
+<!--    </TextView>-->
+
+<!--    <TextView-->
+<!--        android:id="@+id/textView2"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="Welcome"-->
+<!--        android:textAlignment="center"-->
+<!--        android:textSize="20sp"-->
+<!--        android:textColor="@color/black"-->
+<!--        android:textStyle="italic"/>-->
 
 
 </RelativeLayout>
