--- a/app/src/main/res/layout/layout_drink_item.xml
+++ b/app/src/main/res/layout/layout_drink_item.xml
@@ -26,6 +26,7 @@
         <TextView
             android:id="@+id/txtPrice"
             android:text="$1.0"
+            android:textColor="@color/black"
             android:textSize="30sp"
             android:textStyle="bold"
             android:layout_gravity="start"
